; ModuleID = '/home/carl/AnghaBench/lede/target/linux/adm8668/files-3.18/arch/mips/adm8668/extr_irq.c_adm8668_irq_cascade.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/adm8668/files-3.18/arch/mips/adm8668/extr_irq.c_adm8668_irq_cascade.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IRQ_STATUS_REG = common dso_local global i32 0, align 4
@IRQ_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @adm8668_irq_cascade to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @adm8668_irq_cascade() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @IRQ_STATUS_REG, align 4
  %4 = call i32 @intc_read_reg(i32 %3)
  %5 = load i32, i32* @IRQ_MASK, align 4
  %6 = and i32 %4, %5
  store i32 %6, i32* %2, align 4
  %7 = load i32, i32* %2, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %15

9:                                                ; preds = %0
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @fls(i32 %10)
  %12 = sub nsw i32 %11, 1
  store i32 %12, i32* %1, align 4
  %13 = load i32, i32* %1, align 4
  %14 = call i32 @do_IRQ(i32 %13)
  br label %17

15:                                               ; preds = %0
  %16 = call i32 (...) @spurious_interrupt()
  br label %17

17:                                               ; preds = %15, %9
  ret void
}

declare dso_local i32 @intc_read_reg(i32) #1

declare dso_local i32 @fls(i32) #1

declare dso_local i32 @do_IRQ(i32) #1

declare dso_local i32 @spurious_interrupt(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
